Move main to the engine

--- a/compass/CMakeLists.txt
+++ b/compass/CMakeLists.txt
@@ -6,21 +6,22 @@ configure_file(
 
 # List of source files
 set(SRC_FILES
-    "${CMAKE_CURRENT_SOURCE_DIR}/src/compass.cpp"
+    "src/application.cpp"
 )
 
 # List of header files
 set(HDR_FILES
-    "${CMAKE_CURRENT_SOURCE_DIR}/src/defines.h"
-    "${CMAKE_CURRENT_SOURCE_DIR}/include/compass.h"
-)
+    "src/defines.h"
+    "include/compass.h"
+    "src/application.h"
+ "src/entry-point.h")
 
 add_library(compass STATIC ${SRC_FILES} ${HDR_FILES})
 
 # Targets linked to compass are not linked to PRIVATE
 # Targets linked to compass are vicariously linked to PUBLIC
 target_include_directories(compass
-    PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}/include"
+    PUBLIC "include"
     PUBLIC ${PROJECT_BINARY_DIR}
 )
 
