--- a/.editorconfig
+++ b/.editorconfig
@@ -2,6 +2,8 @@
 root = true
 
 [*.{c++,cc,cpp,cppm,cxx,h,h++,hh,hpp,hxx,inl,ipp,ixx,tlh,tli}]
+indent_style = space
+indent_size = 4
 
 # Visual C++ Code Style settings
 
