Start adding windows platform WIP

--- a/compass/CMakeLists.txt
+++ b/compass/CMakeLists.txt
@@ -7,7 +7,8 @@ configure_file(
 # List of source files
 set(SRC_FILES
     "src/core/application.cpp"
-)
+    #"src/platform/windows_platform.cpp"
+ )
 
 # List of header files
 set(HDR_FILES
@@ -16,6 +17,12 @@ set(HDR_FILES
     "src/core/application.h"
     "src/core/entry-point.h" 
     "src/platform/platform.h")
+
+# Conditionally include or exclude the file based on the platform
+if(WIN32)
+    # Include these files on Windows
+    list(APPEND SRC_FILES "src/platform/windows_platform.cpp")
+endif()
 
 add_library(compass STATIC ${SRC_FILES} ${HDR_FILES})
 
