Register window class, start windows procedure WIP

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ set(CLANG_WARNINGS
         -Wimplicit-fallthrough # warn on statements that fallthrough without an explicit annotation
 )
 
-set(CMAKE_CXX_CLANG_TIDY clang-tidy)
+#set(CMAKE_CXX_CLANG_TIDY clang-tidy)
 
 # Export compile commands
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
