--- a/lab/CMakeLists.txt
+++ b/lab/CMakeLists.txt
@@ -1,3 +1,3 @@
 ﻿add_executable(lab "src/lab-application.cpp")
 
-target_link_libraries(lab compass)
+target_link_libraries(lab PRIVATE compass Microsoft.GSL)
